addedbootstrap formand button

--- a/aquariex/src/App.css
+++ b/aquariex/src/App.css
@@ -2,6 +2,24 @@
   text-align: center;
 }
 
+
+.navBar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navBar li {
+  display: inline;
+  padding: 8px;
+  background-color: #dddddd;
+}
+
+li:hover {
+  background-color: #111;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
